--- a/website/index.html
+++ b/website/index.html
@@ -63,6 +63,21 @@
     .mleft-40{
         margin-left: 40%;
     }
+    .ml-18{
+        margin-left: 18%;
+    }
+    .bttn-default {
+        border: 1px solid #22233b;
+        border-radius: 10px;
+        color: #22233b;
+    }
+    .bttn-default:hover {
+        background-color: #22233b;
+        color: #ffffff;
+    }
+    .ml-3{
+        margin-left: 3%;
+    }
     </style>
 </head>
 
@@ -87,7 +102,7 @@
                 <!-- <div class="navbar-header navbar-right">
                     <a href="#" class="navbar-bttn">Try for free</a>
                 </div> -->
-                <ul class="nav navbar-nav navbar-left">
+                <ul class="nav navbar-nav navbar-left ml-18">
                     <li class="active"><a href="#home-page">Home</a></li>
                     <li><a href="#about-page">About</a></li>
                     <li><a href="#feature-page">Features</a></li>
@@ -110,7 +125,7 @@
                     <div class="col-xs-12 col-sm-9 col-md-7">
                         <!-- <p class="text-error wow fadeInUp" data-wow-delay="0.2s">1 Editors' Choice Of 2018</p> -->
                         <h1 class="headline wow fadeInUp" data-wow-delay="0.4s">Find Yourself and<br>New Hobby Today.</h1>
-                        <p class="wow fadeInUp" data-wow-delay="0.6s">Always wanted to do something more with your free time?<br>Let us inspire you to take up anything from classic hobbies, to something a little less conventional.
+                        <p class="wow fadeInUp" data-wow-delay="0.6s">Always wanted to do something more with your free time?<br>Let us inspire you to take up anything from classic hobbies,<br>to something a little less conventional.
                         </p>
                         <div class="space-30 hidden-xs"></div>
                         <div class="space-30"></div>
@@ -303,7 +318,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h3 class="page-title">Activities</h3>
+                    <h3 class="page-title">Do More What You Love</h3>
                     <div class="space-30"></div>
                 </div>
             </div>
@@ -311,75 +326,75 @@
                 <div class="col-xs-12 features">
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-1.png" alt="">
+                            <img src="./images/activities/002-guitar.svg" alt="">
                         </div>
-                        <h4 class="title">Real Time Location</h4>
+                        <h4 class="title">Music</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-1.png" alt="">
+                            <img src="./images/activities/004-photo-camera.svg" alt="">
                         </div>
-                        <h4 class="title">Real Time Location</h4>
+                        <h4 class="title">Photography</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-2.png" alt="">
+                            <img src="./images/activities/001-music.svg" alt="">
                         </div>
-                        <h4 class="title">Unique Stickers</h4>
+                        <h4 class="title">Dance</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-3.png" alt="">
+                            <img src="./images/activities/003-chef.svg" alt="">
                         </div>
-                        <h4 class="title">Voice Message</h4>
+                        <h4 class="title">Cooking</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-4.png" alt="">
+                            <img src="./images/activities/011-running.svg" alt="">
                         </div>
-                        <h4 class="title">Live Conference</h4>
+                        <h4 class="title">Fitness</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-5.png" alt="">
+                            <img src="./images/activities/007-puzzle.svg" alt="">
                         </div>
-                        <h4 class="title">HD Video Chat</h4>
+                        <h4 class="title">Creativity</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-1.png" alt="">
+                            <img src="./images/activities/012-study.svg" alt="">
                         </div>
-                        <h4 class="title">Real Time Location</h4>
+                        <h4 class="title">Education</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-2.png" alt="">
+                            <img src="./images/activities/010-sport.svg" alt="">
                         </div>
-                        <h4 class="title">Unique Stickers</h4>
+                        <h4 class="title">Sports</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-3.png" alt="">
+                            <img src="./images/activities/005-airdrop.svg" alt="">
                         </div>
-                        <h4 class="title">Voice Message</h4>
+                        <h4 class="title">Adventurous</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-4.png" alt="">
+                            <img src="./images/activities/009-class.svg" alt="">
                         </div>
-                        <h4 class="title">Live Conference</h4>
+                        <h4 class="title">Personality Development</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-5.png" alt="">
+                            <img src="./images/activities/008-language.svg" alt="">
                         </div>
-                        <h4 class="title">HD Video Chat</h4>
+                        <h4 class="title">Languages</h4>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/feature-6.png" alt="">
+                            <img src="./images/activities/code.svg" alt="">
                         </div>
-                        <h4 class="title">Animated Emoji</h4>
+                        <h4 class="title">Programming</h4>
                     </div>
                 </div>
             </div>
@@ -631,10 +646,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-8 col-lg-6 pull-right section-padding">
-                    <h3 class="page-title wow fadeInUp" data-wow-delay="0.3s">Add Your Business</h3>
-                    <p class=" wow fadeInUp" data-wow-delay="0.5s">Take your journal wherever you go with our apps for iPhone, iPad, and Android phones &amp; tablets.</p>
+                    <h3 class="page-title wow fadeInUp" data-wow-delay="0.3s">Partner With Us at No Cost</h3>
+                    <p class=" wow fadeInUp" data-wow-delay="0.5s">Join for free and we'll work  with you to set revenue-maximizing rates for open spot and appointments. Then you get paid for every reservation we send you.</p>
                     <div class="space-30"></div>
-                    <a href="#" class="bttn-icon red-hover wow fadeIn" data-wow-delay="0.7s">
+                    <button class="bttn-default bttn-lg" type="button">
+                        Reach out
+                        <span class="ml-3"></span> 
+                        <i class="zmdi zmdi-long-arrow-right"></i>
+                    </button>
+                    <!-- <a href="#" class="bttn-icon red-hover wow fadeIn" data-wow-delay="0.7s">
                         <span class="bttn-content">
                             <span class="icon">
                                <img src="http://quomodosoft.com/html/lunatic/lunatic/images/app-store.png" alt="">
@@ -652,7 +672,7 @@
                             <small>Get It From </small>
                             <strong>Appstore</strong>
                         </span>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
