--- a/website/index.html
+++ b/website/index.html
@@ -129,25 +129,10 @@
                         </p>
                         <div class="space-30 hidden-xs"></div>
                         <div class="space-30"></div>
-                        <!-- <a href="#" class="bttn-icon wow fadeIn" data-wow-delay="0.8s">
-                            <span class="bttn-content">
-                                <span class="icon">
-                                   <img src="http://quomodosoft.com/html/lunatic/lunatic/images/app-store.png" alt="">
-                                </span>
-                                <small>Get It From </small>
-                                <strong>Appstore</strong>
-                            </span>
-                        </a>
-                        <div class="space-30 hidden visible-xs"></div>
-                        <a href="#" class="bttn-icon wow fadeIn" data-wow-delay="1s">
-                            <span class="bttn-content">
-                                <span class="icon">
-                                    <img src="http://quomodosoft.com/html/lunatic/lunatic/images/play-store.png" alt="">
-                                </span>
-                                <small>Get It From </small>
-                                <strong>Appstore</strong>
-                            </span>
-                        </a> -->
+                        <h3 class="wow fadeInUp" data-wow-delay="0.4s">We're Launching Soon</h3>
+                        <button class="bttn-default bttn-lg" type="submit">Get Started</button>
+                        <div class="space-20"></div>
+                        <p class="wow fadeInUp">Sign Up to our Early Access Users List.<br><strong>Coming Soon On:</strong> Android, iOS</p>
                     </div>
                 </div>
             </div>
