--- a/website/index.html
+++ b/website/index.html
@@ -49,6 +49,9 @@
         background-position: center;
         margin-top: 70px;
     }
+    /* .download-area {
+        background: url(./images/partner.jpg) no-repeat scroll left center / auto 100%;
+    } */
     .mainmenu-area ul.nav.navbar-nav > li.active > a, .mainmenu-area ul.nav.navbar-nav > li > a:hover {
         color: #22233b;
         text-decoration: underline;
@@ -153,6 +156,13 @@
     .height-300-px{
         height: 300px;
     }
+    .pointer-icon {
+        font-size: 15px;
+    }
+    .pointer {
+        margin-left: 10px;
+        font-weight: bold;
+    }
     </style>
 </head>
 
@@ -217,7 +227,15 @@
                         <h1 class="headline wow fadeInUp" data-wow-delay="0.4s">Find Yourself and<br>New Hobby Today.</h1>
                         <p class="wow fadeInUp" data-wow-delay="0.6s">Always wanted to do something more with your free time?<br>Let us inspire you to take up anything from classic hobbies,<br>to something a little less conventional.
                         </p>
-                        <div class="space-30 hidden-xs"></div>
+                         <div class="space-30 hidden-xs"></div>
+                         
+                         <i class="zmdi zmdi-star-circle"></i><span class="pointer">All-In-One membership across India</span>
+                         <div class="space-10"></div>
+                         <i class="zmdi zmdi-star-circle"></i><span class="pointer">Share credits with you friends</span> 
+                         <div class="space-10"></div>
+                         <i class="zmdi zmdi-star-circle"></i><span class="pointer">Hassle-free & Flexible booking</span>
+                         <div class="space-10"></div>
+                         <i class="zmdi zmdi-star-circle"></i><span class="pointer">No visit limits & easy cancellation</span>    
                         <div class="space-30"></div>
                         <h3 class="wow fadeInUp" data-wow-delay="0.4s">We're Launching Soon</h3>
                         <a class="bttn-default bttn-lg" href="https://chat.whatsapp.com/DSpCNs4znuWKMHGt62qL5L" target="_blank">
@@ -241,6 +259,9 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h3 class="page-title">How It Works</h3>
+                    <!-- <p class="wow fadeInUp" data-wow-delay="0.6s">Hoblix partners with 1000+ high-quality activity providers and educators. Whether you are looking to figure out how to spend your free time or get into mastering a specific activity, we will match you with specialized trainers who can customize each session to meet your hobby goals.
+
+                    </p> -->
                     <!-- <div class="space-60"></div> -->
                 </div>
             </div>
@@ -278,7 +299,7 @@
     </section>
     <!-- Service-Area / -->
     <!-- Vedio-Area -->
-    <div id="video-area" class="section-padding-top">
+    <!-- <div id="video-area" class="section-padding-top">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
@@ -293,7 +314,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Vedio-Area / -->
     <!-- About-Area -->
     <section class="social-area section-pd-top-2">
@@ -307,20 +328,21 @@
                         <img class="logo-two" src="./images/logo_2.png" alt="">
                     </div>
                     <h3 class="page-title wow fadeInUp" data-wow-delay="0.5s">Check</h3>
-                    <p class="wow fadeInUp" data-wow-delay="0.7s">You can now use all Social Network from this Lunatic app also. Writers and stars of Veep have responded incredulous to the news an Australian politician required stitches after knocking himself unconscious while laughing.</p>
+                    <p class="wow fadeInUp" data-wow-delay="0.7s">Hoblix partners with 1000+ high-quality activity providers and educators. Tell us when, where, and what you are looking for and we'll match you with specialized trainers in your area who can customize each session to meet your hobby goals.
+                    </p>
                     <div class="space-30"></div>
                     <ul class="counter-boxes">
                         <li class=" wow fadeIn" data-wow-delay="0.9s">
                             <div class="counter">
-                                <span class="count">2.5</span> B
+                                <span>Check
                             </div>
-                            <span class="title">User</span>
+                            <span class="title">Reviews & Ratings</span>
                         </li>
                         <li class=" wow fadeIn" data-wow-delay="1.1s">
                             <div class="counter">
-                                <span class="count">2.6</span> B
+                                <span>Invite</span>
                             </div>
-                            <span class="title">Download</span>
+                            <span class="title">Family & Friends</span>
                         </li>
                     </ul>
                 </div>
@@ -337,22 +359,23 @@
                         <img class="logo-two" src="./images/logo_2.png" alt="">
                     </div>
                     <h3 class="page-title wow fadeInUp" data-wow-delay="0.5s">Set</h3>
-                    <p class=" wow fadeInUp" data-wow-delay="0.7s">You can now use all Social Network from this Lunatic app also. Writers and stars of Veep have responded incredulous to the news an Australian politician required stitches after knocking himself unconscious while laughing.</p>
+                    <p class=" wow fadeInUp" data-wow-delay="0.7s">Take classes at popular and favorite centres/trainers. Filter by time, activity,location & even amenities. Once you have found the right activity in current day or in future, reserve your spot in a tap with monthly credits or pay-per-session. 
+                    </p>
                     <div class="space-30"></div>
-                    <!-- <ul class="counter-boxes">
+                    <ul class="counter-boxes">
                         <li class=" wow fadeInUp" data-wow-delay="0.9s">
                             <div class="counter">
-                                <span class="count">250</span> K
+                                <span>Check</span>
                             </div>
-                            <span class="title">Reviews</span>
+                            <span class="title">Available spots & time</span>
                         </li>
                         <li class=" wow fadeInUp" data-wow-delay="1.1s">
                             <div class="counter">
-                                <span class="count">2.6</span> B
+                                <span>Advance</span>
                             </div>
-                            <span class="title">Download</span>
+                            <span class="title">Booking(a week before)</span>
                         </li>
-                    </ul> -->
+                    </ul>
                 </div>
                 <div class="hidden-xs col-sm-6">
                     <img class="width-60 mleft-40" src="./images/set.png" alt="">
@@ -373,20 +396,21 @@
                         <img class="logo-two" src="./images/logo_2.png" alt="">
                     </div>
                     <h3 class="page-title wow fadeInUp" data-wow-delay="0.5s">Go</h3>
-                    <p class="wow fadeInUp" data-wow-delay="0.7s">You can now use all Social Network from this Lunatic app also. Writers and stars of Veep have responded incredulous to the news an Australian politician required stitches after knocking himself unconscious while laughing.</p>
+                    <p class="wow fadeInUp" data-wow-delay="0.7s">Attend the classes, enrich your experiences and let your talent go places with a great time. Visit your favourite hobby classes again and again, or mix things up with rock climbing and beyond.
+                    </p>
                     <div class="space-30"></div>
                     <ul class="counter-boxes">
                         <li class=" wow fadeIn" data-wow-delay="0.9s">
                             <div class="counter">
-                                <span class="count">2.5</span> B
+                                <span>Easy</span>
                             </div>
-                            <span class="title">User</span>
+                            <span class="title">Cancellation</span>
                         </li>
                         <li class=" wow fadeIn" data-wow-delay="1.1s">
                             <div class="counter">
-                                <span class="count">2.6</span> B
+                                <span>Support</span>
                             </div>
-                            <span class="title">Download</span>
+                            <span class="title">Calender & Maps</span>
                         </li>
                     </ul>
                 </div>
@@ -781,7 +805,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h3 class="page-title">Hoblix Blog</h3>
+                    <h3 class="page-title">Interesting Reads</h3>
                     <div class="space-60"></div>
                 </div>
             </div>
