--- a/website/index.html
+++ b/website/index.html
@@ -163,6 +163,13 @@
         margin-left: 10px;
         font-weight: bold;
     }
+    .price-box .price-rate {
+        color: #343434;
+    }
+    .plan-pointer{
+        text-align: left;
+        margin-left: 40px;
+    }
     </style>
 </head>
 
@@ -371,9 +378,9 @@
                         </li>
                         <li class=" wow fadeInUp" data-wow-delay="1.1s">
                             <div class="counter">
-                                <span>Advance</span>
+                                <span>Booking</span>
                             </div>
-                            <span class="title">Booking(a week before)</span>
+                            <span class="title">Future Classes</span>
                         </li>
                     </ul>
                 </div>
@@ -431,75 +438,73 @@
                 <div class="col-xs-12 features">
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="./images/activities/002-guitar.svg" alt="">
-                        </div>
-                        <h4 class="title">Music</h4>
-                    </div>
-                    <div class="single-feature">
-                        <div class="feature-icon">
-                            <img src="./images/activities/004-photo-camera.svg" alt="">
-                        </div>
-                        <h4 class="title">Photography</h4>
-                    </div>
-                    <div class="single-feature">
-                        <div class="feature-icon">
-                            <img src="./images/activities/001-music.svg" alt="">
-                        </div>
-                        <h4 class="title">Dance</h4>
-                    </div>
-                    <div class="single-feature">
-                        <div class="feature-icon">
-                            <img src="./images/activities/003-chef.svg" alt="">
-                        </div>
-                        <h4 class="title">Cooking</h4>
-                    </div>
-                    <div class="single-feature">
-                        <div class="feature-icon">
-                            <img src="./images/activities/011-running.svg" alt="">
+                            <img src="./images/activities/fitness.png" alt="">
                         </div>
                         <h4 class="title">Fitness</h4>
+                        <p>gym, crossfit, pilates... </p>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="./images/activities/007-puzzle.svg" alt="">
+                            <img src="./images/activities/guitar.png" alt="">
                         </div>
-                        <h4 class="title">Creativity</h4>
+                        <h4 class="title">Music</h4>
+                        <p>classical, guitar, raps... </p>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="./images/activities/012-study.svg" alt="">
+                            <img src="./images/activities/dance.png" alt="">
+                        </div>
+                        <h4 class="title">Dance</h4>
+                        <p>zumba, salsa, classical... </p>
+                    </div>
+                    <div class="single-feature">
+                        <div class="feature-icon">
+                            <img src="./images/activities/cooking.png" alt="">
+                        </div>
+                        <h4 class="title">Cooking</h4>
+                        <p>baking, culinary, italian... </p>
+                    </div>
+                    <div class="single-feature">
+                        <div class="feature-icon">
+                            <img src="./images/activities/education.png" alt="">
                         </div>
                         <h4 class="title">Education</h4>
+                        <p>libraries, languages, science... </p>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="./images/activities/010-sport.svg" alt="">
+                            <img src="./images/activities/creative.png" alt="">
+                        </div>
+                        <h4 class="title">Crafts</h4>
+                        <p>pottery, gardening, designing... </p>
+                    </div>
+                    <div class="single-feature">
+                        <div class="feature-icon">
+                            <img src="./images/activities/sports.png" alt="">
                         </div>
                         <h4 class="title">Sports</h4>
+                        <p>swimming, squash, tennis... </p>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="./images/activities/005-airdrop.svg" alt="">
+                            <img src="./images/activities/adventure.png" alt="">
                         </div>
                         <h4 class="title">Adventurous</h4>
+                        <p>trekking, rafting, paraglidng... </p>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="./images/activities/009-class.svg" alt="">
+                            <img src="./images/activities/technology.png" alt="">
                         </div>
-                        <h4 class="title">Personality Development</h4>
+                        <h4 class="title">Technology</h4>
+                        <p>programming, AR/VR, AI/ML... </p>
                     </div>
                     <div class="single-feature">
                         <div class="feature-icon">
-                            <img src="./images/activities/008-language.svg" alt="">
+                            <img src="./images/activities/personality.png" alt="">
                         </div>
-                        <h4 class="title">Languages</h4>
-                    </div>
-                    <div class="single-feature">
-                        <div class="feature-icon">
-                            <img src="./images/activities/code.svg" alt="">
-                        </div>
-                        <h4 class="title">Programming</h4>
+                        <h4 class="title" style="margin-top: 20px;">Personality Development</h4>
+                        <p>seminars, skills, public speaking </p>
                     </div>
                 </div>
             </div>
@@ -546,54 +551,48 @@
     </section> -->
     <!-- Gallery-Area / -->
     <!-- Price-Area -->
-    <!-- <section class="price-area section-pd-top-2" id="price-page">
+    <section class="price-area section-pd-top-2" id="price-page">
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h3 class="page-title">Membership Plans</h3>
+                    <div class="space-10"></div>
+                    <p>Flexibility is key - to everything in life. Start with free trial and change or cancel plan at anytime.</p>
                     <div class="space-60"></div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <!-- <div class="col-xs-12 col-sm-4">
                     <div class="price-box wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="price-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/price-icon-1.png" alt="">
-                        </div>
-                        <h4 class="title">Personal</h4>
+                        <h4 class="title">Free Trial</h4>
                         <ul>
                             <li>24 Hours Support</li>
                             <li>All Over the World</li>
                             <li>Customer Managment</li>
                             <li>Unlimited</li>
                         </ul>
-                        <h3 class="price-rate">$9/M</h3>
+                        <h3 class="price-rate"> &#8377; 750/-</h3>
                         <a href="# " class="bttn-default">Get Started</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-xs-12 col-sm-4">
                     <div class="price-box wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="price-icon">
+                        <!-- <div class="price-icon">
                             <img src="http://quomodosoft.com/html/lunatic/lunatic/images/price-icon-2.png" alt="">
-                        </div>
-                        <h4 class="title">Small Team</h4>
+                        </div> -->
+                        <h4 class="title">Free Trial</h4>
                         <ul>
-                            <li>24 Hours Support</li>
-                            <li>All Over the World</li>
-                            <li>Customer Managment</li>
-                            <li>Custom Profile Screen</li>
-                            <li>Business &amp; Financ Analysing</li>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Includes 3 classes</li>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Limited vist/class</li>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Remind you 4 days before</li>
                         </ul>
-                        <h3 class="price-rate">$29/M</h3>
-                        <a href="# " class="bttn-default">Get Started</a>
+                        <h3 class="price-rate">&#8377; 0/-</h3>
+                        <a href="https://chat.whatsapp.com/DSpCNs4znuWKMHGt62qL5L" class="bttn-default" target="_blank">Get Started</a>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-4">
+                <!-- <div class="col-xs-12 col-sm-4">
                     <div class="price-box wow fadeInUp" data-wow-delay="0.9s">
-                        <div class="price-icon">
-                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/price-3.png" alt="">
-                        </div>
-                        <h4 class="title">Enterprice</h4>
+                        <h4 class="title">Free</h4>
                         <ul>
                             <li>24 Hours Support</li>
                             <li>All Over the World</li>
@@ -602,13 +601,43 @@
                             <li>Custom Profile Screen</li>
                             <li>Unlimited Tires</li>
                         </ul>
-                        <h3 class="price-rate">$49/M</h3>
-                        <a href="# " class="bttn-default">Get Started</a>
+                        <h3 class="price-rate"> &#8377; 0/-</h3>
+                        <a href="# " class="bttn-default">Start Free Trial</a>
                     </div>
-                </div>
+                </div>  -->
+                <div class="col-xs-12 col-sm-4">
+                    <div class="price-box wow fadeInUp" data-wow-delay="0.9s">
+                        <!-- <div class="price-icon">
+                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/price-3.png" alt="">
+                        </div> -->
+                        <h4 class="title">Pay-per-session</h4>
+                        <ul>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Includes 1 class</li>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>No limits on visit</li>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Pay according to class</li>
+                        </ul>
+                        <h3 class="price-rate">Price as per class</h3>
+                        <!-- <a href="# " class="bttn-default">Get Started</a> -->
+                    </div>
+                </div> 
+                <div class="col-xs-12 col-sm-4">
+                    <div class="price-box wow fadeInUp" data-wow-delay="0.9s">
+                        <!-- <div class="price-icon">
+                            <img src="http://quomodosoft.com/html/lunatic/lunatic/images/price-3.png" alt="">
+                        </div> -->
+                        <h4 class="title">Monthly</h4>
+                        <ul>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Get 30 Credits</li>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Book unlimited classes</li>
+                            <li class="plan-pointer"><i class="zmdi zmdi-star-circle"></i><span class="pointer"></span>Share Credits with friends</li>
+                        </ul>
+                        <h3 class="price-rate"> &#8377; 750/-</h3>
+                        <!-- <a href="# " class="bttn-default">Get Started</a> -->
+                    </div>
+                </div> 
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Price-Area / -->
     <!-- Team-Area -->
     <!-- <section id="team-page" class="section-pd-top-2">
