Add blogs section

--- a/website/index.html
+++ b/website/index.html
@@ -170,6 +170,25 @@
         text-align: left;
         margin-left: 40px;
     }
+    .content_element {
+        margin-bottom: 1.5em;
+    }
+    hr.pLine {
+        border: 1px solid #22233b;
+        width: 100%;
+    }
+    input:focus, button:focus, a:focus, a:hover {
+        text-decoration: none;
+        outline: none;
+        color: #4f4343;
+    }
+    .byline__prefix {
+        font-style: italic;
+        font-weight: 600;
+        font-size: small;
+        color: black;
+        text-decoration: underline !important;
+    }
     </style>
 </head>
 
@@ -562,19 +581,6 @@
                 </div>
             </div>
             <div class="row">
-                <!-- <div class="col-xs-12 col-sm-4">
-                    <div class="price-box wow fadeInUp" data-wow-delay="0.3s">
-                        <h4 class="title">Free Trial</h4>
-                        <ul>
-                            <li>24 Hours Support</li>
-                            <li>All Over the World</li>
-                            <li>Customer Managment</li>
-                            <li>Unlimited</li>
-                        </ul>
-                        <h3 class="price-rate"> &#8377; 750/-</h3>
-                        <a href="# " class="bttn-default">Get Started</a>
-                    </div>
-                </div> -->
                 <div class="col-xs-12 col-sm-4">
                     <div class="price-box wow fadeInUp" data-wow-delay="0.6s">
                         <!-- <div class="price-icon">
@@ -835,11 +841,13 @@
             <div class="row">
                 <div class="col-xs-12 text-center">
                     <h3 class="page-title">Interesting Reads</h3>
+                    <div class="space-10"></div>
+                    <p>Great articles and expert opinion on hobbies, trends, lifestyle and holistic wellness</p>
                     <div class="space-60"></div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-4">
+                <!-- <div class="col-xs-12 col-sm-4">
                     <article class="blog-single wow fadeInUp" data-wow-delay="0.3s">
                         <div class="blog-photo">
                             <img class="height-300-px" src="./images/blog-1.jpeg" alt="">
@@ -851,21 +859,36 @@
                             </ul>
                         </div>
                     </article>
+                </div> -->
+                <div class="content_element">
+                    <hr class="pLine">
+                    <h4>
+                        <a href="https://medium.com/@emiliabunea/why-global-managers-need-passionate-hobbies-7d546db539fc?source=search_post" target="_blank"><span class="tile-content"> Why global managers need passionate hobbies<span></span></span></a>
+                    </h4>
+                    <div class="byline byline--post-list">
+                        <a href="https://medium.com/" target="_blank" class="byline__prefix">Medium</a>
+                    </div>
+                    <hr class="pLine">
                 </div>
-                <div class="col-xs-12 col-sm-4">
-                    <article class="blog-single wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="blog-photo">
-                            <img class="height-300-px" src="./images/blog-2.jpeg" alt="">
-                        </div>
-                        <div class="blog-content">
-                            <h5 class="title"><a href="https://medium.com/the-mission/these-5-hobbies-will-make-you-smarter-e353b8a47e88" target="_blank">Why We Should Stop Turning Hobbies into Jobs.</a></h5>
-                            <ul class="blog-meta">
-                                <li><i class="zmdi zmdi-time"></i> February 1, 2020</li>
-                            </ul>
-                        </div>
-                    </article>
+                <div class="content_element">
+                    <h4>
+                        <a href="https://medium.com/the-mission/these-5-hobbies-will-make-you-smarter-e353b8a47e88" target="_blank"><span class="tile-content">Why We Should Stop Turning Hobbies into Jobs.<span></span></span></a>
+                    </h4>
+                    <div class="byline byline--post-list">
+                        <a href="https://medium.com/" target="_blank" class="byline__prefix">Medium</a>
+                    </div>
+                    <hr class="pLine">
                 </div>
-                <div class="col-xs-12 col-sm-4">
+                <div class="content_element">
+                    <h4>
+                        <a href="https://medium.com/human-output/why-you-should-form-hobbies-over-habits-cec4b7de1716" target="_blank"><span class="tile-content">Why You Should Form Hobbies Over Habits.<span></span></span></a>
+                    </h4>
+                    <div class="byline byline--post-list">
+                        <a href="https://medium.com/" target="_blank" class="byline__prefix">Medium</a>
+                    </div>
+                    <hr class="pLine">
+                </div>
+                <!-- <div class="col-xs-12 col-sm-4">
                     <article class="blog-single wow fadeInUp" data-wow-delay="0.9s">
                         <div class="blog-photo">
                             <img class="height-300-px" src="./images/blog-3.jpeg" alt="">
@@ -877,7 +900,7 @@
                             </ul>
                         </div>
                     </article>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
