Add partner images

--- a/website/index.html
+++ b/website/index.html
@@ -48,9 +48,12 @@
         background-position: center;
         margin-top: 70px;
     }
-    /* .download-area {
-        background: url(./images/partner.jpg) no-repeat scroll left center / auto 100%;
-    } */
+    @media screen and (min-width: 800px) {
+        .download-area {
+            background: url(./images/partner.png) no-repeat scroll left center / auto 100%;
+            background-size: 770px 600px;
+        }
+    }
     .mainmenu-area ul.nav.navbar-nav > li.active > a, .mainmenu-area ul.nav.navbar-nav > li > a:hover {
         color: #22233b;
         text-decoration: underline;
